--- a/BE/package.json
+++ b/BE/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.19",
     "express": "^5.1.0",
-    "mysql2": "^3.15.2",
-    "cors": "^2.8.5"
+    "mysql2": "^3.15.2"
   }
 }
